- Chore with new features. - Refactor the security flows.

--- a/common/src/main/resources/locale/common_messages_vi.properties
+++ b/common/src/main/resources/locale/common_messages_vi.properties
@@ -1,9 +1,20 @@
-account_not_exist=Tài khoản không tồn tại
-success=Thành công
-duplicate_email=Email đã bị sử dụng trước đó
-wrong_password=Sai mật khẩu
+account_not_exist=T\u00E0i kho\u1EA3n kh\u00F4ng t\u1ED3n t\u1EA1i
+success=Th\u00E0nh c\u00F4ng
+duplicate_email=Email \u0111\u00E3 b\u1ECB s\u1EED d\u1EE5ng tr\u01B0\u1EDBc \u0111\u00F3
+wrong_password=Sai m\u1EADt kh\u1EA9u
 male=Nam
-female=Nữ
-other=Khác
-can_not_be_parent_of_self=Không thể chọn chính mình làm mục cha
-not_valid_parent_size=Size cha không hợp lệ
+female=N\u1EEF
+other=Kh\u00E1c
+can_not_be_parent_of_self=Kh\u00F4ng th\u1EC3 ch\u1ECDn ch\u00EDnh m\u00ECnh l\u00E0m m\u1EE5c cha
+not_valid_parent_size=Size cha kh\u00F4ng h\u1EE3p l\u1EC7
+wrong_username_password=username ho\u1EB7c password kh\u00F4ng \u0111\u00FAng
+duplicate_username=tr\u00F9ng t\u00EAn \u0111\u0103ng nh\u1EADp
+unauthorized=Ch\u01B0a x\u00E1c th\u1EF1c
+wrong_authentication_info=Sai th\u00F4ng tin x\u00E1c th\u1EF1c
+file_type_not_supported=Lo\u1EA1i file kh\u00F4ng h\u1ED7 tr\u1EE3
+can_not_connect_to_url=Kh\u00F4ng th\u1EC3 k\u1EBFt n\u1ED1i \u0111\u1EBFn url: {0}
+failed_to_store_file=L\u01B0u file {0} th\u1EA5t b\u1EA1i
+forbidden_extension=Extension {0} kh\u00F4ng h\u1EE3p l\u1EC7
+file_not_found=Kh\u00F4ng t\u00ECm th\u1EA5y file {0}
+the_file_can_not_be_empty=File kh\u00F4ng \u0111\u01B0\u1EE3c b\u1ECF tr\u1ED1ng: {0}
+error_from_external_service=L\u1ED7i t\u1EEB service ngo\u00E0i
