--- a/common/src/main/resources/locale/ValidationMessages_vi.properties
+++ b/common/src/main/resources/locale/ValidationMessages_vi.properties
@@ -51,3 +51,10 @@ org.hibernate.validator.constraints.pl.PESEL.message                = invalid Po
 
 org.hibernate.validator.constraints.time.DurationMax.message        = phải ngắn hơn ${inclusive == true ? 'hoặc bằng ' : ''} ${days == 0 ? '' : days == 1 ? ' 1 ngày' : ' ' += days += ' ngày'}${hours == 0 ? '' : hours == 1 ? ' 1 hour' : ' ' += hours += ' hours'}${minutes == 0 ? '' : minutes == 1 ? ' 1 minute' : ' ' += minutes += ' minutes'}${seconds == 0 ? '' : seconds == 1 ? ' 1 second' : ' ' += seconds += ' seconds'}${millis == 0 ? '' : millis == 1 ? ' 1 milli' : ' ' += millis += ' millis'}${nanos == 0 ? '' : nanos == 1 ? ' 1 nano' : ' ' += nanos += ' nanos'}
 org.hibernate.validator.constraints.time.DurationMin.message        = must be longer than${inclusive == true ? ' or equal to' : ''}${days == 0 ? '' : days == 1 ? ' 1 day' : ' ' += days += ' days'}${hours == 0 ? '' : hours == 1 ? ' 1 hour' : ' ' += hours += ' hours'}${minutes == 0 ? '' : minutes == 1 ? ' 1 minute' : ' ' += minutes += ' minutes'}${seconds == 0 ? '' : seconds == 1 ? ' 1 second' : ' ' += seconds += ' seconds'}${millis == 0 ? '' : millis == 1 ? ' 1 milli' : ' ' += millis += ' millis'}${nanos == 0 ? '' : nanos == 1 ? ' 1 nano' : ' ' += nanos += ' nanos'}
+
+vn.amit.common.constraint.ValueIn.message=ph\u1EA3i l\u00E0 m\u1ED9t trong c\u00E1c gi\u00E1 tr\u1ECB {anyOf}
+vn.amit.common.constraint.ValueOfEnum.message=kh\u00F4ng ph\u1EA3i l\u00E0 m\u1ED9t gi\u00E1 tr\u1ECB {enumerates} h\u1EE3p l\u1EC7
+vn.amit.common.constraint.Exists.message=kh\u00F4ng t\u1ED3n t\u1EA1i
+vn.amit.common.constraint.NotNullWhen.message={fields} kh\u00F4ng \u0111\u01B0\u1EE3c b\u1ECF tr\u1ED1ng khi {validatedBy} {operator} {value}
+vn.amit.common.constraint.NotNullIfField.message={fields} kh\u00F4ng \u0111\u01B0\u1EE3c b\u1ECF tr\u1ED1ng khi {validatedBy} {operator} {value}
+vn.amit.common.constraint.Unique.message=đã bị sử dụng trước đó
